HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveMissingRequiredClass/Source/Main.uv
//! Rejected derive specimen for unmet derive `requires` contracts.

internal class RequiredDeriveClass {
}

derive target NeedsRequiredClass(target: Type) |: requires RequiredDeriveClass {
    let reflected = target
}

#derive(NeedsRequiredClass)
public record DeriveMissingRequiredClassReference {
    public value: i32
}
